--- a/client/www/templates/game.html
+++ b/client/www/templates/game.html
@@ -18,6 +18,7 @@
         <button class="button icon-left ion-document" ng-click="doPlay(2)" ng-disabled="buttonsDisabled">Papel</button>
         <button class="button icon-left ion-scissors" ng-click="doPlay(3)" ng-disabled="buttonsDisabled">Tijera</button>
       </div>
+      <!-- directiva que invoca al metodo -->
       <button ng-click="testSocket()">test socket</button>
   </ion-content>
 </ion-view>
