--- a/client/www/templates/game.html
+++ b/client/www/templates/game.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Game">
   <ion-content ng-controller="GameCtrl">
     <div class="row">
-    <div class="pf col col-50" ng-repeat="player in players">
+    <div class="pf col col-50" ng-repeat="player in game.players">
       <h1 class="pf-player">{{ player.name }}</h1>
-      <stars points="player.points"></stars>
+      <stars points="player.wins"></stars>
       <div class="pf-currentplay">
-        <i class="icon ion-{{player.selectElement}}"></i>
+        <i class="icon {{player.lastPlay | icon}}"></i>
       </div>
     </div>
   </div>
@@ -14,11 +14,10 @@
     </div>
     <progress max="1000" value="{{timeLeft}}"> </progress>
       <div class="button-bar">
-        <button class="button icon-left ion-egg" ng-click="doPlay(1)" ng-disabled="buttonsDisabled">Piedra</button>
-        <button class="button icon-left ion-document" ng-click="doPlay(2)" ng-disabled="buttonsDisabled">Papel</button>
-        <button class="button icon-left ion-scissors" ng-click="doPlay(3)" ng-disabled="buttonsDisabled">Tijera</button>
+        <button class="button icon-left ion-egg" ng-click="doPlay('ROCK')" ng-disabled="buttonsDisabled">Piedra</button>
+        <button class="button icon-left ion-document" ng-click="doPlay('PAPER')" ng-disabled="buttonsDisabled">Papel</button>
+        <button class="button icon-left ion-scissors" ng-click="doPlay('SCISSORS')" ng-disabled="buttonsDisabled">Tijera</button>
       </div>
       <!-- directiva que invoca al metodo -->
-      <button ng-click="testSocket()">test socket</button>
   </ion-content>
 </ion-view>
