--- a/client/www/templates/game.html
+++ b/client/www/templates/game.html
@@ -5,7 +5,7 @@
       <h1 class="pf-player">{{ player.name }}</h1>
       <stars points="player.wins"></stars>
       <div class="pf-currentplay">
-        <i class="icon {{player.lastPlay | icon}}"></i>
+        <i class="icon {{player.currentPlay | icon}}"></i>
       </div>
     </div>
   </div>
@@ -19,5 +19,10 @@
         <button class="button icon-left ion-scissors" ng-click="doPlay('SCISSORS')" ng-disabled="buttonsDisabled()">Tijera</button>
       </div>
       <!-- directiva que invoca al metodo -->
+
+
+      <h2>
+        {{game.status}}
+      </h2>
   </ion-content>
 </ion-view>
